2010-08-24 nex <nex@autistici.org>

* main.c: (null)