@@ -1,1 +1,1 @@
-
+Implement all the tabs and panels
